--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
       salt-pillar-root: ${{ matrix.salt_pillar_root }}
 
   windows:
-    uses: plus3it/actions-workflows/.github/workflows/test-salt-windows.yml@c9c3d1193bd64bc2a9def11605608a98a3164d96
+    uses: ./.github/workflows/test-salt-windows.yml
     strategy:
       matrix:
         os_version:
@@ -39,4 +39,3 @@ jobs:
       salt-os-version: ${{ matrix.os_version }}
       salt-state: ${{ matrix.salt_state }}
       salt-pillar-root: ${{ matrix.salt_pillar_root }}
-      salt-installer-url: https://repo.saltproject.io/windows/Salt-Minion-3004.2-1-Py3-AMD64-Setup.exe
